# orderdesk-mcp

./: .env.development.example  .env.example  .env.production.example  .env.staging.example  .gitignore  ALL-PHASES-COMPLETE.md  AUTHENTICATION-EXPLAINED.md  BRANCHING_STRATEGY.md  CI-FIXES-COMPLETE.md  CI-STATUS-PHASE6.md  CI-VALIDATION-COMPLETE.md  CI_STATUS.md  COMPLETE-PROJECT-STATUS.md  DOCKER-TESTING-GUIDE.md  Dockerfile  FINAL-GITHUB-CLEANUP.md  FINAL-STATUS.md  FINAL_UPDATE_SUMMARY.md  GITHUB-CI-FIXED.md  GITHUB-DIRECTORIES-CLEANUP.md  GITHUB-UPDATE-SUMMARY.md  GITHUB_LINEAR_UPDATE.md  IMPLEMENTATION-STATUS.md  LINEAR-COMPLETE-SETUP.md  LINEAR-INTEGRATION-COMPLETE.md  LINEAR-MANUAL-SETUP.md  LINEAR-MILESTONES-GUIDE.md  LINEAR-PROJECT-COMPLETE.md  LINEAR-PROJECT-SUMMARY.md  LINEAR-UPDATE-COMPLETE.md  LOGIN-INSTRUCTIONS.md  MILESTONE-COMPLETE.md  PHASE-COMPLETION-STATUS.md  PHASE0-COMPLETE.md  PHASE0-VALIDATION-REPORT.md  PHASE1-COMPLETE.md  PHASE1-PROGRESS.md  PHASE2-COMPLETE.md  PHASE2-PLAN.md  PHASE3-COMPLETE.md  (+39 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
config/: README.md
config/environments/: development.env  production.env  staging.env
config/nginx/: nginx.conf
docs/: BACKUP_RECOVERY.md  DATABASE_MIGRATIONS.md  DEPLOYMENT-BARE-METAL.md  DEPLOYMENT-DOCKER.md  DEPLOYMENT-KUBERNETES.md  ENVIRONMENT_CONFIGURATION.md  HTTP_MCP_GUIDE.md  IMPLEMENTATION-GUIDE.md  LOAD_TESTING.md  MCP_TOOLS_REFERENCE.md  PERFORMANCE_OPTIMIZATION.md  PHASE-COMPLETION-SUMMARY.md  PRODUCTION-RUNBOOK.md  SECURITY-AUDIT.md  SETUP_GUIDE.md  endpoints.md  operations.md
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  redis-deployment.yaml  secrets.yaml.example  service.yaml
mcp_server/: __init__.py  config.py  main.py  mcp_server.py
mcp_server/auth/: __init__.py  crypto.py  middleware.py
mcp_server/email/: __init__.py  magic_link.py  providers.py  service.py
mcp_server/email/templates/: verification.html  verification.txt  welcome.html  welcome.txt
mcp_server/models/: common.py  database.py  orderdesk.py
mcp_server/routers/: health.py  mcp_http.py  orders.py  products.py  stores.py  webhooks.py
mcp_server/services/: __init__.py  cache.py  orderdesk.py  orderdesk_client.py  rate_limit.py  session.py  store.py  tenant.py  user.py
mcp_server/templates/: base.html  console.html  dashboard.html  error_404.html  error_500.html  login.html  settings.html
mcp_server/templates/signup/: form.html  success.html  verify_pending.html
mcp_server/templates/stores/: add.html  details.html  edit.html  list.html
mcp_server/templates/users/: details.html  list.html
mcp_server/utils/: logging.py  master_key.py  metrics.py  proxy.py
mcp_server/webui/: __init__.py  auth.py  routes.py
nginx/: nginx.conf
scripts/backup/: automated-backup.sh  backup.sh  restore.sh
scripts/load-testing/: k6-basic-load.js  k6-stress-test.js  run-load-test.sh
scripts/migrations/: README.md  migrate.sh
scripts/migrations/versions/: 001_initial_schema.sql  002_add_store_config_example.sql
scripts/performance/: analyze_db.sh  vacuum_db.sh
tests/: conftest.py  test_auth.py  test_crypto.py  test_database.py  test_email.py  test_health.py  test_order_mutations.py  test_orderdesk_client.py  test_orders_mcp.py  test_products_mcp.py  test_signup.py  test_store_service.py  test_stores.py  test_tenant_service.py
